<resources>
    <string name="app_name">AndroidTemplate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="email_chooser_title">Send email</string>
    <string name="email_failed">Email failed</string>

</resources>
